--- a/index.html
+++ b/index.html
@@ -1,17 +1,37 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meme Generator</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="centra-titulo">
+      <h1 class="titulo">
+        Meme <br />
+        <span>Generator</span>
+      </h1>
+    </div>
 
-</head>
-<body>
+    <div class="container">
+      <canvas class="box"></canvas>
+      <div class="crear">
+        <h2>Añade imagen</h2>
+        <input type="file" />
+        <textarea placeholder="Añade el texto" id="texto"></textarea>
+        <input type="color" id="color" />
+        <button class="add">Aceptar</button>
 
-    <h1 class="titulo">Meme Generator</h1>
+        <button id="guardar">Descargar</button>
+      </div>
+    </div>
 
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
