--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       <canvas class="box"></canvas>
       <div class="crear">
         <h2>Añade imagen</h2>
-        <input type="file" />
+        <input type="file" id="file"/>
         <textarea placeholder="Añade el texto" id="texto"></textarea>
         <input type="color" id="color" />
-        <button class="add">Aceptar</button>
+        <button class="add" onclick="addImg()">Aceptar</button>
 
         <button id="guardar">Descargar</button>
       </div>
