--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap"
       rel="stylesheet"
     />
+    
   </head>
   <body>
     <div class="centra-titulo">
@@ -26,11 +27,13 @@
         <input type="file" id="file"/>
         <textarea placeholder="Añade el texto" id="texto"></textarea>
         <input type="color" id="color" />
-        <button class="add" onclick="addImg()">Aceptar</button>
+        <button class="add">Aceptar</button>
 
         <button id="guardar">Descargar</button>
       </div>
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/460/fabric.js" integrity="sha512-d5yqsvICrC8y0ivNsNizSCHXjzireXYU6LmzAvcrL97GMwEn0VKx1vclEwvtsh/yPD2EcATnUG1oEtJuFcTE3Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <script src="app.js"></script>
   </body>
