--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     </div>
 
     <div class="container">
-      <canvas class="box"></canvas>
+      <div class="box">
+        <img id="meme">
+      </div>
       <div class="crear">
         <h2>Añade imagen</h2>
         <input type="file" id="file"/>
