--- a/index.html
+++ b/index.html
@@ -25,15 +25,16 @@
     <div class="box">
       <div class="div-texto">
       </div>
-      <img id="meme">
+      <img id="meme" alt="Meme">
     </div>
     <div class="crear">
       <h2>Añade imagen</h2>
       <input type="file" id="file" />
       <textarea placeholder="Añade el texto" id="texto"></textarea>
       <button class="add">Aceptar</button>
+      <button id="guardar" >Descargar</button>
+      <button id="borrar" style="display: none;">Borrar</button>
 
-      <button id="guardar" onclick="guardarContenido()">Descargar</button>
     </div>
   </div>
 
