--- a/index.html
+++ b/index.html
@@ -14,29 +14,31 @@
 </head>
 
 <body>
-  <div class="centra-titulo">
-    <h1 class="titulo">
-      Meme <br />
-      <span>Generator</span>
-    </h1>
-  </div>
-
   <div class="container">
-    <div class="box">
-      <div class="div-texto">
-      </div>
-      <img id="meme" alt="Meme">
+    <div class="centra-titulo">
+      <h1 class="titulo">
+        Meme <br />
+        <span>Generator</span>
+      </h1>
     </div>
-    <div class="crear">
-      <h2>Añade imagen</h2>
-      <input type="file" id="file" />
-      <textarea placeholder="Añade el texto" id="texto"></textarea>
-      <button class="add">Aceptar</button>
-      <button id="guardar" >Descargar</button>
-      <button id="borrar" style="display: none;">Borrar</button>
-
+  
+    <div class="container">
+      <div class="box">
+        <div class="div-texto">
+        </div>
+        <img id="meme" alt="Meme">
+      </div>
+      <div class="crear">
+        <h2>Añade imagen</h2>
+        <input type="file" id="file" />
+        <textarea placeholder="Añade el texto" id="texto"></textarea>
+        <button class="add">Aceptar</button>
+        <button id="guardar" >Descargar</button>
+        <button id="borrar" style="display: none;">Borrar</button>
+      </div>
     </div>
   </div>
+  
 
   <script src="app.js"></script>
 </body>
