--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="contenedor">
     <div class="centra-titulo">
       <h1 class="titulo">
         Meme <br />
